removing unnecessary code

--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -11,13 +11,13 @@
 
     <fieldset>
         @inputText(
-            signupForm("firstName"),
+            signupForm("firstname"),
             'placeholder -> Messages("First Name"),
             '_label -> null,
             'class -> "form-control"
         )
         @inputText(
-            signupForm("lastName"),
+            signupForm("lastname"),
             'placeholder -> Messages("Last Name"),
             '_label -> null,
             'class -> "form-control"
@@ -29,13 +29,13 @@
             'class -> "form-control"
         )
         @inputText(
-            signupForm("userName"),
-            'placeholder -> Messages("userName"),
+            signupForm("username"),
+            'placeholder -> Messages("username"),
             '_label -> null,
             'class -> "form-control"
         )
         @inputPassword(
-            signupForm("inputPassword"),
+            signupForm("inputpassword"),
             '_label -> null,
             'placeholder -> Messages("password"),
             'class -> "form-control"
